Fixed intro-text v alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -232,13 +232,6 @@ body {
     justify-content : space-between;
 }
 
-/*.intro-text {
-    width           : 50%;
-    height          : 100%;
-    margin-top      : 73px;
-    background-color: transparent;
-}*/
-
 .intro-text {
     flex: 0 0 50%;
     display: flex;
